# fancy_RPM_ino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RPM_gradient_palettes.h  fancyRPM.h  fancy_RPM.h  library.json  library.properties
examples/: main.cpp
include/: RPM_gradient_palettes.h  fancyRPM.h
src/: fancyRPM.cpp  fancyRPM.h  fancy_RPM.h
src/colorFunctions/: colorFunctions.cpp  colorFunctions.h
src/fkc4/fancy_rpm/: RPM_gradient_palettes.h  _updateLEDs.cpp  fancyRPM.cpp  fancyRPM.h  fancyRPMfunction.cpp  fancyRPMpalette.cpp
